--- a/index.html
+++ b/index.html
@@ -1,73 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPT-5 AI Marketing Platform</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4; }
-        header { background:#0073e6; color:white; padding:20px; text-align:center; }
-        main { padding:20px; }
-        .section { background:white; margin-bottom:20px; padding:20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-        button { padding:10px 20px; margin-top:10px; background:#0073e6; color:white; border:none; border-radius:5px; cursor:pointer; }
-        input, textarea { width:100%; padding:10px; margin-top:5px; margin-bottom:10px; border-radius:5px; border:1px solid #ccc; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GPS Enterprise Global Solution - GPT-5 AI Platform</title>
+<style>
+  body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f4f4f4; }
+  header { background:#003366; color:#fff; padding:15px; text-align:center; }
+  h1 { margin:0; font-size:24px; }
+  main { padding:20px; }
+  .dashboard { display:grid; grid-template-columns:1fr 1fr; gap:20px; }
+  .card { background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.2); transition: transform 0.2s; }
+  .card:hover { transform: scale(1.03); }
+  button { padding:10px 15px; background:#003366; color:#fff; border:none; border-radius:5px; cursor:pointer; }
+  button:hover { background:#0055aa; }
+  .financial-hub { margin-top:20px; background:#e6e6e6; padding:15px; border-radius:8px; }
+  .link-list a { display:block; color:#003366; text-decoration:none; margin:3px 0; }
+  .link-list a:hover { color:#0055aa; }
+  .graph-container { display:flex; flex-wrap:wrap; gap:15px; margin-top:10px; }
+  canvas { background:#fff; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
+  footer { background:#003366; color:#fff; padding:15px; text-align:center; margin-top:30px; font-size:12px; }
+  input, select { padding:8px; margin:5px 0; width:100%; }
+</style>
 </head>
 <body>
-    <header>
-        <h1>GPT-5 AI Marketing Platform</h1>
-        <p>Voice + Visual + CRM + RAG + Mobile Ready</p>
-    </header>
 
-    <main>
-        <div class="section">
-            <h2>Chat with AI</h2>
-            <textarea id="userInput" rows="4" placeholder="Type your question here..."></textarea>
-            <button onclick="sendToGPT()">Send</button>
-            <div id="aiResponse" style="margin-top:15px; background:#e6f0ff; padding:10px; border-radius:5px;"></div>
-        </div>
+<header>
+  <h1>GPS Enterprise Global Solution - GPT-5 AI Platform</h1>
+</header>
 
-        <div class="section">
-            <h2>Voice Input</h2>
-            <button onclick="startVoice()">🎤 Start Voice Input</button>
-            <p id="voiceOutput"></p>
-        </div>
+<main>
+  <div class="dashboard">
+    <div class="card">
+      <h2>Chat AI</h2>
+      <button onclick="startChat()">Start Chat</button>
+      <p id="chat-status">Status: idle</p>
+    </div>
+    <div class="card">
+      <h2>Voice AI</h2>
+      <button onclick="startVoice()">Start Voice AI</button>
+      <p id="voice-status">Status: idle</p>
+    </div>
+    <div class="card">
+      <h2>Text / SMS AI</h2>
+      <button onclick="sendText()">Send Text</button>
+      <p id="text-status">Status: idle</p>
+    </div>
+    <div class="card">
+      <h2>Voicemail AI</h2>
+      <button onclick="sendVoicemail()">Send Voicemail</button>
+      <p id="voicemail-status">Status: idle</p>
+    </div>
+    <div class="card">
+      <h2>RAG Dashboard</h2>
+      <button onclick="fetchRAG()">Run RAG Query</button>
+      <p id="rag-status">Result will appear here</p>
+    </div>
+    <div class="card">
+      <h2>CRM Module</h2>
+      <button onclick="openCRM()">Open CRM</button>
+      <p>Supports Salesforce, HubSpot, SuiteCRM</p>
+    </div>
+    <div class="card">
+      <h2>Analytics & Reports</h2>
+      <button onclick="showAnalytics()">View Analytics</button>
+      <p>Live performance metrics</p>
+    </div>
+  </div>
 
-        <div class="section">
-            <h2>Quick CRM Integration</h2>
-            <p>Connect Salesforce, HubSpot, SuiteCRM etc.</p>
-            <button onclick="crmDemo()">Connect Demo</button>
-            <p id="crmStatus"></p>
-        </div>
-    </main>
+  <div class="financial-hub">
+    <h2>Global Financial Hub</h2>
+    <div class="link-list">
+      <a href="#" target="_blank">Stock Market Live</a>
+      <a href="#" target="_blank">Forex Market Live</a>
+      <a href="#" target="_blank">Cryptocurrency Live</a>
+      <a href="#" target="_blank">Commodities Live</a>
+      <a href="#" target="_blank">Financial News Hub</a>
+    </div>
 
-    <script>
-        // Placeholder GPT-5 function
-        function sendToGPT() {
-            const input = document.getElementById('userInput').value;
-            if (!input) return alert('Please type a message!');
-            document.getElementById('aiResponse').innerText = 'GPT-5 Response: ' + input + ' [This is a placeholder response. Replace with API integration]';
-        }
+    <h3>Interactive Code & Quote Tool</h3>
+    <div>
+      <label>Enter Amount:</label>
+      <input type="number" id="quoteAmount" placeholder="e.g., 1000">
+      <label>Select Currency:</label>
+      <select id="quoteCurrency">
+        <option value="USD">USD</option>
+        <option value="EUR">EUR</option>
+        <option value="GBP">GBP</option>
+      </select>
+      <button onclick="calculateQuote()">Calculate Quote</button>
+      <p id="quoteResult">Result will appear here</p>
+    </div>
 
-        // Voice recognition (simple demo)
-        function startVoice() {
-            if (!('webkitSpeechRecognition' in window)) {
-                alert('Your browser does not support voice recognition.');
-                return;
-            }
-            const recognition = new webkitSpeechRecognition();
-            recognition.lang = 'en-US';
-            recognition.onresult = function(event) {
-                const transcript = event.results[0][0].transcript;
-                document.getElementById('voiceOutput').innerText = 'You said: ' + transcript;
-            };
-            recognition.start();
-        }
+    <div class="graph-container">
+      <canvas id="stockChart" width="300" height="200"></canvas>
+      <canvas id="forexChart" width="300" height="200"></canvas>
+      <canvas id="cryptoChart" width="300" height="200"></canvas>
+    </div>
+  </div>
+</main>
 
-        // CRM demo placeholder
-        function crmDemo() {
-            document.getElementById('crmStatus').innerText = 'CRM connected successfully! [Demo placeholder]';
-        }
-    </script>
+<footer>
+  &copy; 2025 GPS Enterprise Global Solution. All Rights Reserved. <br>
+  NDA & Terms Apply. Unauthorized use strictly prohibited.
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  // GPT-5 API Key placeholder (securely use environment variable in Vercel)
+  const GPT5_API_KEY = "YOUR_GPT5_API_KEY_PLACEHOLDER";
+
+  function startChat() { document.getElementById('chat-status').innerText="Chat AI started"; alert("Chat AI is live!"); }
+  function startVoice() { document.getElementById('voice-status').innerText="Voice AI started"; alert("Voice AI is live!"); }
+  function sendText() { document.getElementById('text-status').innerText="Text AI sent"; alert("Text AI sent!"); }
+  function sendVoicemail() { document.getElementById('voicemail-status').innerText="Voicemail AI sent"; alert("Voicemail AI sent!"); }
+  function fetchRAG() { document.getElementById('rag-status').innerText="RAG query executed"; alert("RAG executed!"); }
+  function openCRM() { alert("CRM module opened"); }
+  function showAnalytics() { alert("Analytics dashboard opened"); }
+
+  function calculateQuote() {
+    const amount = parseFloat(document.getElementById('quoteAmount').value);
+    const currency = document.getElementById('quoteCurrency').value;
+    if(isNaN(amount)) { alert("Enter a valid number"); return; }
+    let result = 0;
+    switch(currency) {
+      case "USD": result = amount * 1.0; break;
+      case "EUR": result = amount * 0.93; break;
+      case "GBP": result = amount * 0.81; break;
+    }
+    document.getElementById('quoteResult').innerText=`Converted Amount: ${result.toFixed(2)} ${currency}`;
+  }
+
+  const stockCtx = document.getElementById('stockChart').getContext('2d');
+  const forexCtx = document.getElementById('forexChart').getContext('2d');
+  const cryptoCtx = document.getElementById('cryptoChart').getContext('2d');
+
+  function randomData() { return Array.from({length:10}, ()=>Math.floor(Math.random()*100)); }
+
+  new Chart(stockCtx, { type:'line', data:{labels:["Mon","Tue","Wed","Thu","Fri","Sat","Sun"], datasets:[{label:"Stock Index", data:randomData(), borderColor:'rgba(255,99,132,1)', backgroundColor:'rgba(255,99,132,0.2)'}] }, options:{} });
+  new Chart(forexCtx, { type:'line', data:{labels:["Mon","Tue","Wed","Thu","Fri","Sat","Sun"], datasets:[{label:"Forex Rates", data:randomData(), borderColor:'rgba(54,162,235,1)', backgroundColor:'rgba(54,162,235,0.2)'}] }, options:{} });
+  new Chart(cryptoCtx, { type:'line', data:{labels:["Mon","Tue","Wed","Thu","Fri","Sat","Sun"], datasets:[{label:"Crypto Prices", data:randomData(), borderColor:'rgba(255,206,86,1)', backgroundColor:'rgba(255,206,86,0.2)'}] }, options:{} });
+</script>
+
 </body>
 </html>
